--- a/Ground Truth calc.ipynb
+++ b/Ground Truth calc.ipynb
@@ -54,6 +54,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data = [x for x in list(zip(embs, key)) if key[0][-1] + timedelta(days=365*6) < x[1][-1] < key[0][-1] + timedelta(days=365*(6+1))] # gather amazon reviews of the third year only\n",
+    "data = [list(t) for t in zip(*data)]\n",
+    "data[1] = [x[0]-1 for x in data[1]] # fix class names from 1..5 to 0..4 for easier 1-hot encoding\n",
+    "\n",
+    "X_test, y_test = balance(data[0], data[1])\n",
+    "print(scorePred.evaluate(X_test, y_test)[1])\n",
+    "print(scorePred.evaluate(X_test[:1000], y_test[:1000])[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "print(scorePred.evaluate(X_test[:10000], y_test[:10000])[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "print(scorePred.evaluate(X_test[:100000], y_test[:100000])[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
