Ground Truth calc now creates predictors for every year

--- a/Ground Truth calc.ipynb
+++ b/Ground Truth calc.ipynb
@@ -8,7 +8,10 @@
    "source": [
     "import pickle\n",
     "from datetime import timedelta\n",
-    "from Classifier import ScorePredictor, balance"
+    "from Classifier import ScorePredictor, balance\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -17,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/movies/embeddings/amazon_ordered_by_time{}.pickle'.format(''), 'rb') as handle:\n",
-    "    embs, key = pickle.load(handle)"
+    "with open('data/movies/embeddings/amazon_small.pickle', 'rb') as handle:\n",
+    "    embs, keys = pickle.load(handle)"
    ]
   },
   {
@@ -27,26 +30,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scorePred = ScorePredictor()\n",
-    "scorePred.load('classifier')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acc = []\n",
-    "\n",
-    "for year in range(16):\n",
-    "    data = [x for x in list(zip(embs, key)) if key[0][-1] + timedelta(days=365*year) < x[1][-1] < key[0][-1] + timedelta(days=365*(year+1))] # gather amazon reviews of the third year only\n",
-    "    data = [list(t) for t in zip(*data)]\n",
-    "    data[1] = [x[0]-1 for x in data[1]] # fix class names from 1..5 to 0..4 for easier 1-hot encoding\n",
+    "def train_on_year(embeddings, keys, year):\n",
+    "    nth_year = [x for x in list(zip(embeddings, keys)) if keys[0][-1] + timedelta(days=365*year) < x[1][-1] < keys[0][-1] + timedelta(days=365*(year+1))] # gather amazon reviews of the third year only\n",
+    "    nth_year = [list(t) for t in zip(*nth_year)]\n",
+    "    nth_year[1] = [x[1] for x in nth_year[1]] # fix class names from 1..5 to 0..4 for easier 1-hot encoding\n",
     "    \n",
-    "    X_test, y_test = balance(data[0], data[1])\n",
-    "    acc.append(scorePred.evaluate(X_test, y_test)[1])\n",
-    "    print('Accuracy of the classifier in year', year+1, ':', acc[-1], 'This is the year on which the classifier was trained!' if year == 2 else '')"
+    "    X_train, X_test, y_train, y_test = train_test_split(nth_year[0], nth_year[1], test_size=0.33, random_state=42)\n",
+    "    s = ScorePredictor()\n",
+    "    s.train(X_train, y_train)\n",
+    "    return s"
    ]
   },
   {
@@ -55,13 +47,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [x for x in list(zip(embs, key)) if key[0][-1] + timedelta(days=365*6) < x[1][-1] < key[0][-1] + timedelta(days=365*(6+1))] # gather amazon reviews of the third year only\n",
-    "data = [list(t) for t in zip(*data)]\n",
-    "data[1] = [x[0]-1 for x in data[1]] # fix class names from 1..5 to 0..4 for easier 1-hot encoding\n",
-    "\n",
-    "X_test, y_test = balance(data[0], data[1])\n",
-    "print(scorePred.evaluate(X_test, y_test)[1])\n",
-    "print(scorePred.evaluate(X_test[:1000], y_test[:1000])[1])\n"
+    "results = []\n",
+    "for outer_loop in range(0, 16):\n",
+    "    predictor = train_on_year(embs, keys, outer_loop)\n",
+    "    \n",
+    "    accuracy = []\n",
+    "    for year in range(16):\n",
+    "        data = [x for x in list(zip(embs, keys)) if keys[0][-1] + timedelta(days=365*year) < x[1][-1] < keys[0][-1] + timedelta(days=365*(year+1))]\n",
+    "        data = [list(t) for t in zip(*data)]\n",
+    "        data[1] = [x[1] for x in data[1]]\n",
+    "        X_test, y_test = balance(data[0], data[1])\n",
+    "        accuracy.append(predictor.evaluate(X_test, y_test)[1])\n",
+    "    results.append(accuracy)"
    ]
   },
   {
@@ -70,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "print(scorePred.evaluate(X_test[:10000], y_test[:10000])[1])"
+    "plt.imshow(np.array(results), cmap='hot', interpolation='nearest')\n",
+    "plt.show()"
    ]
   },
   {
@@ -80,8 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "print(scorePred.evaluate(X_test[:100000], y_test[:100000])[1])"
+    "import seaborn as sns\n",
+    "ax = sns.heatmap(np.array(results), linewidth=0.5)\n",
+    "plt.show()"
    ]
   },
   {
@@ -89,7 +87,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(np.array(results[10]))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.array(results[11]))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.array(results[7]))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.array(results[6]))\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
