applied rework to fcit detector; added kerneltwosample detector; some readability improvements to cosine detector code; added ipynb for fcit and kerneltwosample detector

--- a/Drift experiments FCIT.ipynb
+++ b/Drift experiments FCIT.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from detectors.CosineDetector import CosineSimilarityDriftDetector\n",
+    "from detectors.FCITDetector import FCITDriftDetector\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -41,15 +41,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csdd = CosineSimilarityDriftDetector()\n",
-    "csdd.fit(gradual_dict['orig'][0])"
+    "fcit = FCITDriftDetector()\n",
+    "fcit.fit(gradual_dict['orig'][0])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# general tests"
+    "# general test"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "source": [
     "p_s = []\n",
     "for percentage in gradual_dict['drifted'][0]:\n",
-    "    p_s.append(csdd.predict_proba(percentage))\n",
+    "    p_s.append(fcit.predict_proba(percentage))\n",
     "print(p_s)"
    ]
   },
@@ -79,13 +79,6 @@
    "source": [
     "plt.plot(p_s)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
