--- a/Drift experiments KernelTwosample.ipynb
+++ b/Drift experiments KernelTwosample.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from detectors.CosineDetector import CosineSimilarityDriftDetector\n",
+    "from detectors.KernelTwoSampleDetector import KernelTwoSampleDriftDetector\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -41,15 +41,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csdd = CosineSimilarityDriftDetector()\n",
-    "csdd.fit(gradual_dict['orig'][0])"
+    "kts = KernelTwoSampleDriftDetector()\n",
+    "kts.fit(gradual_dict['orig'][0])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# general tests"
+    "# general test"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "source": [
     "p_s = []\n",
     "for percentage in gradual_dict['drifted'][0]:\n",
-    "    p_s.append(csdd.predict_proba(percentage))\n",
+    "    p_s.append(kts.predict_proba(percentage))\n",
     "print(p_s)"
    ]
   },
