--- a/Drift experiments Alibi KS.ipynb
+++ b/Drift experiments Alibi KS.ipynb
@@ -68,8 +68,8 @@
     }
    ],
    "source": [
-    "aks = AlibiKSDetector()\n",
-    "aks.fit(gradual_dict['orig'][0])"
+    "detector = AlibiKSDetector()\n",
+    "detector.fit(gradual_dict['orig'][0])"
    ]
   },
   {
@@ -98,14 +98,14 @@
     "if(True):\n",
     "    p_s = []\n",
     "    for percentage in gradual_dict['drifted'][0]:\n",
-    "        p_s.append(aks.predict(percentage))\n",
+    "        p_s.append(detector.predict(percentage))\n",
     "    print(p_s)\n",
     "\n",
     "# Float values\n",
     "if(True):\n",
     "    p_s = []\n",
     "    for percentage in gradual_dict['drifted'][0]:\n",
-    "        p_s.append(aks.predict_proba(percentage))\n",
+    "        p_s.append(detector.predict_proba(percentage))\n",
     "    print(p_s)\n",
     "\n",
     "# Tests parameter 'alternative'\n",
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fdc6ad7a970>]"
+       "[<matplotlib.lines.Line2D at 0x7fdf9f2d62b0>]"
       ]
      },
      "execution_count": 5,
