--- a/Drift experiments.ipynb
+++ b/Drift experiments.ipynb
@@ -19,20 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bow_50_file /home/eml4u/EML4U/data/amazon/amazon_drift_bow_50.pickle\n",
-      "bow_768_file /home/eml4u/EML4U/data/amazon/amazon_drift_bow_768.pickle\n",
-      "Samples: 10000 10000 10000\n",
-      "Samples: 10000 10000 10000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import yaml\n",
     "import os.path\n",
@@ -58,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,17 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bow_50 AlibiKSDetector 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_id = \"bow_50\"\n",
     "detector = AlibiKSDetector()\n",
@@ -187,17 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bow_768 AlibiKSDetector 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_id = \"bow_768\"\n",
     "detector = AlibiKSDetector()\n",
@@ -222,7 +195,7 @@
    "outputs": [],
    "source": [
     "data_id = \"bow_50\"\n",
-    "detector = AlibiMMDDetector()\n",
+    "detector = AlibiMMDDetector(backend = 'pytorch')\n",
     "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
     "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
    ]
@@ -234,14 +207,14 @@
    "outputs": [],
    "source": [
     "data_id = \"bow_768\"\n",
-    "detector = AlibiMMDDetector()\n",
+    "detector = AlibiMMDDetector(backend = 'pytorch')\n",
     "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
     "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,17 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bow_50 CosineDetector 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_id = \"bow_50\"\n",
     "detector = CosineSimilarityDriftDetector()\n",
@@ -271,17 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bow_768 CosineDetector 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 10000 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_id = \"bow_768\"\n",
     "detector = CosineSimilarityDriftDetector()\n",
@@ -325,15 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Has no setup file\n",
-    "#https://github.com/FabianHinder/DAWIDD\n",
-    "\n",
-    "#from detectors.KernelTwoSampleDetector import KernelTwoSampleDriftDetector\n",
-    "#detector_id = \"KernelTwoSampleDetector\""
+    "from detectors.KernelTwoSampleDetector import KernelTwoSampleDriftDetector\n",
+    "detector_id = \"KernelTwoSampleDetector\""
    ]
   },
   {
@@ -361,6 +315,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from detectors.AlibiLSDD import AlibiLSDDDetector\n",
+    "detector_id = \"AlibiLSDDDetector\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_id = \"bow_50\"\n",
+    "detector = AlibiLSDDDetector(backend='pytorch')\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_id = \"bow_768\"\n",
+    "detector = AlibiLSDDDetector()\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -380,12 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Print results\n",
-    "if(False):\n",
+    "if(True):\n",
     "    from pprint import pprint\n",
     "    pprint(results)"
    ]
