added lsdd bow768

--- a/Drift experiments figures.ipynb
+++ b/Drift experiments figures.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,8 +32,8 @@
     "# Set data paths\n",
     "config          = yaml.safe_load(open(\"config.yaml\", \"r\"))\n",
     "results_file = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a\")\n",
-    "results_bow50_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow50.svg\")\n",
-    "results_bow768_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow768.svg\")\n",
+    "results_bow50_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow50.pdf\")\n",
+    "results_bow768_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow768.pdf\")\n",
     "\n",
     "# Load data\n",
     "print(results_file)\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,8 @@
       "bow_768\n",
       " AlibiKSDetector\n",
       " CosineDetector\n",
-      " AlibiMMDDetector\n"
+      " AlibiMMDDetector\n",
+      " AlibiLSDDDetector\n"
      ]
     }
    ],
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
     "    ax.plot(x, results[\"bow_50\"][\"CosineDetector\"][\"predictions\"], label='Cosine')\n",
     "    ax.plot(x, results[\"bow_50\"][\"FCITDetector\"][\"predictions\"], label='FCIT')\n",
     "    ax.plot(x, results[\"bow_50\"][\"AlibiMMDDetector\"][\"predictions\"], label='MMD')\n",
-    "    ax.plot(x, results[\"bow_50\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDDD')\n",
+    "    ax.plot(x, results[\"bow_50\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD')\n",
     "    plt.legend(loc='center right')\n",
     "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value',\n",
     "           title='Drift detection: Bag of Words with 50 dimensions')\n",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +116,7 @@
     "    ax.plot(x, results[\"bow_768\"][\"AlibiKSDetector\"][\"predictions\"], label='KS')\n",
     "    ax.plot(x, results[\"bow_768\"][\"CosineDetector\"][\"predictions\"], label='Cosine')\n",
     "    ax.plot(x, results[\"bow_768\"][\"AlibiMMDDetector\"][\"predictions\"], label='MMD')\n",
+    "    ax.plot(x, results[\"bow_768\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD')\n",
     "    plt.legend(loc='center right')\n",
     "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value',\n",
     "           title='Drift detection: Bag of Words with 768 dimensions')\n",
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +267,11 @@
       "\n",
       "AlibiMMDDetector\n",
       "Runtime 3367.0329155921936 16.759654760360718\n",
-      "Predictions [0.4099999964237213, 0.3700000047683716, 0.23999999463558197, 0.11999999731779099, 0.05999999865889549, 0.009999999776482582, 0.009999999776482582, 0.009999999776482582, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "Predictions [0.4099999964237213, 0.3700000047683716, 0.23999999463558197, 0.11999999731779099, 0.05999999865889549, 0.009999999776482582, 0.009999999776482582, 0.009999999776482582, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "\n",
+      "AlibiLSDDDetector\n",
+      "Runtime 43.56562066078186 16.48658800125122\n",
+      "Predictions [0.6499999761581421, 0.6800000071525574, 0.4399999976158142, 0.5, 0.2800000011920929, 0.2199999988079071, 0.14000000059604645, 0.20000000298023224, 0.05999999865889549, 0.07000000029802322, 0.03999999910593033, 0.05999999865889549, 0.009999999776482582, 0.009999999776482582, 0.0, 0.0, 0.009999999776482582, 0.0, 0.0, 0.0, 0.009999999776482582]\n"
      ]
     }
    ],
@@ -275,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
