--- a/Drift experiments.ipynb
+++ b/Drift experiments.ipynb
@@ -343,7 +343,7 @@
    "outputs": [],
    "source": [
     "data_id = \"bow_768\"\n",
-    "detector = AlibiLSDDDetector()\n",
+    "detector = AlibiLSDDDetector(backend='pytorch')\n",
     "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
     "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
    ]
