fig: added ChiSquared ; added runtime text

--- a/Drift experiments figures.ipynb
+++ b/Drift experiments figures.ipynb
@@ -32,8 +32,10 @@
     "# Set data paths\n",
     "config          = yaml.safe_load(open(\"config.yaml\", \"r\"))\n",
     "results_file = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a\")\n",
-    "results_bow50_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow50.pdf\")\n",
-    "results_bow768_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow768.pdf\")\n",
+    "results_bow50_pdf = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow50.pdf\")\n",
+    "results_bow50_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow50.png\")\n",
+    "results_bow768_pdf = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow768.pdf\")\n",
+    "results_bow768_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow768.png\")\n",
     "\n",
     "# Load data\n",
     "print(results_file)\n",
@@ -57,6 +59,7 @@
       " FCITDetector\n",
       " AlibiMMDDetector\n",
       " AlibiLSDDDetector\n",
+      " AlibiChiSquaredDetector\n",
       "bow_768\n",
       " AlibiKSDetector\n",
       " CosineDetector\n",
@@ -82,22 +85,41 @@
     "# https://realpython.com/python-matplotlib-guide/\n",
     "# https://matplotlib.org/stable/gallery/lines_bars_and_markers/simple_plot.html\n",
     "\n",
+    "# https://matplotlib.org/stable/tutorials/colors/colors.html\n",
+    "# 'tab:blue''tab:orange''tab:green''tab:red''tab:purple''tab:brown''tab:pink''tab:gray''tab:olive''tab:cyan'\n",
+    "\n",
+    "from matplotlib.ticker import (MultipleLocator, AutoMinorLocator)\n",
     "import numpy as np\n",
     "target_percentages = [0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1]\n",
     "x = np.divide(target_percentages, 2)\n",
+    "#print(x)\n",
     "\n",
     "if(plot_images):\n",
+    "    linewidth=1.5\n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.plot(x, results[\"bow_50\"][\"AlibiKSDetector\"][\"predictions\"], label='KS')\n",
-    "    ax.plot(x, results[\"bow_50\"][\"CosineDetector\"][\"predictions\"], label='Cosine')\n",
-    "    ax.plot(x, results[\"bow_50\"][\"FCITDetector\"][\"predictions\"], label='FCIT')\n",
-    "    ax.plot(x, results[\"bow_50\"][\"AlibiMMDDetector\"][\"predictions\"], label='MMD')\n",
-    "    ax.plot(x, results[\"bow_50\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD')\n",
+    "    ax.plot(x, results[\"bow_50\"][\"CosineDetector\"][\"predictions\"], label='Cosine', color='tab:purple', linewidth=linewidth)\n",
+    "    ax.plot(x, results[\"bow_50\"][\"AlibiKSDetector\"][\"predictions\"], label='KS', color='tab:green', linewidth=linewidth)\n",
+    "    ax.plot(x, results[\"bow_50\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD', color='tab:orange', linewidth=linewidth)\n",
+    "    ax.plot(x, results[\"bow_50\"][\"AlibiMMDDetector\"][\"predictions\"], '--', label='MMD', color='tab:brown', linewidth=linewidth)\n",
+    "    ax.plot(x, results[\"bow_50\"][\"FCITDetector\"][\"predictions\"], ':', label='FCIT', color='tab:blue', linewidth=linewidth)\n",
+    "    ax.plot(x, results[\"bow_50\"][\"AlibiChiSquaredDetector\"][\"predictions\"], label='ChiSquared', color='tab:red', linewidth=linewidth)\n",
     "    plt.legend(loc='center right')\n",
     "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value',\n",
     "           title='Drift detection: Bag of Words with 50 dimensions')\n",
-    "    ax.grid()\n",
-    "    fig.savefig(results_bow50_image)\n",
+    "    ax.grid(color='#dddddd')\n",
+    "    ax.xaxis.set_minor_locator(AutoMinorLocator(4))\n",
+    "    \n",
+    "    #ax.grid(b=True, linestyle='-', linewidth=1, which=\"both\")\n",
+    "    #plt.tick_params(which='major', length=11, color='r')\n",
+    "    #plt.tick_params(which='minor', length=4, color='r')\n",
+    "    #ax.grid(which='major', b=True)\n",
+    "    #ax.grid(which='minor', b=True)\n",
+    "    #plt.xticks(x)\n",
+    "    #plt.minorticks_on()\n",
+    "    #plt.tick_params(axis='x', which='major', bottom=True)\n",
+    "\n",
+    "    fig.savefig(results_bow50_pdf)\n",
+    "    fig.savefig(results_bow50_image, dpi=150)\n",
     "    plt.show()"
    ]
   },
@@ -112,16 +134,19 @@
     "x = np.divide(target_percentages, 2)\n",
     "\n",
     "if(plot_images):\n",
+    "    linewidth=1.5\n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.plot(x, results[\"bow_768\"][\"AlibiKSDetector\"][\"predictions\"], label='KS')\n",
-    "    ax.plot(x, results[\"bow_768\"][\"CosineDetector\"][\"predictions\"], label='Cosine')\n",
-    "    ax.plot(x, results[\"bow_768\"][\"AlibiMMDDetector\"][\"predictions\"], label='MMD')\n",
-    "    ax.plot(x, results[\"bow_768\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD')\n",
+    "    ax.plot(x, results[\"bow_768\"][\"CosineDetector\"][\"predictions\"], label='Cosine', color='tab:purple', linewidth=linewidth)\n",
+    "    ax.plot(x, results[\"bow_768\"][\"AlibiKSDetector\"][\"predictions\"], label='KS', color='tab:green', linewidth=linewidth)\n",
+    "    ax.plot(x, results[\"bow_768\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD', color='tab:orange', linewidth=linewidth)\n",
+    "    ax.plot(x, results[\"bow_768\"][\"AlibiMMDDetector\"][\"predictions\"], '--', label='MMD', color='tab:brown', linewidth=linewidth)\n",
     "    plt.legend(loc='center right')\n",
     "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value',\n",
     "           title='Drift detection: Bag of Words with 768 dimensions')\n",
-    "    ax.grid()\n",
-    "    fig.savefig(results_bow768_image)\n",
+    "    ax.grid(color='#dddddd')\n",
+    "    ax.xaxis.set_minor_locator(AutoMinorLocator(4))\n",
+    "    fig.savefig(results_bow768_pdf)\n",
+    "    fig.savefig(results_bow768_image, dpi=150)\n",
     "    plt.show()"
    ]
   },
@@ -181,7 +206,11 @@
       "\n",
       "AlibiLSDDDetector\n",
       "Runtime 52.9299418926239 15.901162385940552\n",
-      "Predictions [0.8500000238418579, 0.2199999988079071, 0.019999999552965164, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "Predictions [0.8500000238418579, 0.2199999988079071, 0.019999999552965164, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "\n",
+      "AlibiChiSquaredDetector\n",
+      "Runtime 2258.7252547740936 0.06413960456848145\n",
+      "Predictions [0.49575776, 0.4971542, 0.496436, 0.49603707, 0.49587762, 0.4969946, 0.49627647, 0.49639624, 0.49587762, 0.4967552, 0.49631634, 0.49603713, 0.49623656, 0.49571797, 0.49687484, 0.49619672, 0.49579772, 0.49639618, 0.49671537, 0.49627647, 0.49579775]\n"
      ]
     }
    ],
@@ -240,6 +269,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(plot_images):\n",
+    "    plt.plot(results[\"bow_50\"][\"AlibiChiSquaredDetector\"][\"predictions\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,12 +330,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(plot_images):\n",
+    "    plt.plot(results[\"bow_768\"][\"AlibiMMDDetector\"][\"predictions\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "if(plot_images):\n",
     "    plt.plot(results[\"bow_768\"][\"CosineDetector\"][\"predictions\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(plot_images):\n",
+    "    plt.plot(results[\"bow_768\"][\"AlibiLSDDDetector\"][\"predictions\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtimes (fit and detect) in minutes:\n",
+      "[('CosineDetector', 0.09917251666386923),\n",
+      " ('AlibiKSDetector', 0.1047538677851359),\n",
+      " ('AlibiLSDDDetector', 1.1471850713094076),\n",
+      " ('FCITDetector', 8.06465163230896),\n",
+      " ('AlibiChiSquaredDetector', 37.64648990631103),\n",
+      " ('AlibiMMDDetector', 54.174930930137634)]\n",
+      "[('CosineDetector', 0.11988515059153239),\n",
+      " ('AlibiLSDDDetector', 1.000870144367218),\n",
+      " ('AlibiKSDetector', 1.3010831197102866),\n",
+      " ('AlibiMMDDetector', 56.39654283920924)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print results\n",
+    "if(True):\n",
+    "    print(\"Runtimes (fit and detect) in minutes:\")\n",
+    "    from pprint import pprint\n",
+    "    for data_id in results:\n",
+    "        times = {}\n",
+    "        for detector_id in results[data_id]:\n",
+    "            time = 0\n",
+    "            for key in results[data_id][detector_id]:\n",
+    "                if(key == \"time_detect\" or key == \"time_fit\"):\n",
+    "                    time += results[data_id][detector_id][key]\n",
+    "            times[detector_id] = time/60\n",
+    "        pprint(sorted(times.items(), key=lambda item: item[1]))"
    ]
   },
   {
